main menu structure & style updated

--- a/css/main.less
+++ b/css/main.less
@@ -3,3 +3,13 @@
   .make-md-column(6);
   .make-lg-column(6);
 }
+
+section {
+  &.home {
+    background: red;
+  }
+
+  &.about {
+    background: blue;
+  }
+}
