--- a/css/navbar.less
+++ b/css/navbar.less
@@ -2,6 +2,7 @@ nav {
   position: fixed;
   left: 50%;
   .translate(-50%;0);
+  z-index: 100;
 }
 
 .navbar-toggle {
@@ -50,6 +51,25 @@ nav {
 
   .icon-bar + .icon-bar {
     margin-top: 0;
+  }
+}
+
+.main-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: white;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  .opacity(0);
+  //.translate(0,-100%);
+  .transition(all 200ms ease-in-out);
+
+  &.active {
+    //.translate(0,0);
+    .opacity(1);
+    z-index: 99;
   }
 }
 
