--- a/css/style.css
+++ b/css/style.css
@@ -6789,6 +6789,7 @@ nav {
   -ms-transform: translate(-50%, 0);
   -o-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
+  z-index: 100;
 }
 .navbar-toggle {
   position: absolute;
@@ -6847,6 +6848,25 @@ nav {
 }
 .navbar-toggle .icon-bar + .icon-bar {
   margin-top: 0;
+}
+.main-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: white;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: all 200ms ease-in-out;
+  -o-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
+}
+.main-menu.active {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  z-index: 99;
 }
 @media only screen and (max-width: 767px) {
   .navbar-brand {
@@ -7055,6 +7075,12 @@ nav {
     float: left;
     width: 50%;
   }
+}
+section.home {
+  background: red;
+}
+section.about {
+  background: blue;
 }
 footer {
   background-color: #dbdbdb;
