--- a/css/navbar.less
+++ b/css/navbar.less
@@ -3,12 +3,20 @@ nav {
   left: 50%;
   .translate(-50%;0);
   z-index: 100;
+  //width: 100%;
+  //height: 65px;
+  //background: red;
+  //border-bottom: 1px solid black;
+
+  > .container {
+    position: relative;
+  }
 }
 
 .navbar-toggle {
   position: absolute;
   .size(50px,40px);
-  top: 20px;
+  top: 10px;
   right: 10px;
   z-index: 110;
   cursor: pointer;
