--- a/css/navbar.less
+++ b/css/navbar.less
@@ -1,16 +1,69 @@
 nav {
   position: fixed;
   left: 50%;
-  .translate(-50%;0);
+  .translate(-50%; 0);
   z-index: 100;
-  //width: 100%;
+  width: 100%;
   //height: 65px;
   //background: red;
   //border-bottom: 1px solid black;
 
-  > .container {
+  > .container-fluid {
     position: relative;
   }
+}
+
+.navigation {
+    .container-fluid;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    padding: 0;
+    .opacity(0);
+    //.translate(0,-100%);
+    .transition(all 100ms ease-in-out);
+
+    > .wrapper {
+      .make-row(0);
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+    }
+
+    .main-menu {
+      .make-lg-column(4);
+      .make-lg-column-offset(8);
+      background: red;
+      height: 100%;
+      .translate(100%,0);
+      .transition(all 200ms ease-in-out);
+
+      ul {
+        list-style-type: none;
+
+        .make-row();
+
+
+        li {
+          .make-lg-column(4);
+        }
+      }
+
+    }
+
+    &.active {
+      //.translate(0,0);
+      .opacity(1);
+      z-index: 99;
+
+      .main-menu {
+        .translate(0,0);
+      }
+    }
+
+
 }
 
 .navbar-toggle {
@@ -61,26 +114,6 @@ nav {
     margin-top: 0;
   }
 }
-
-.main-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: white;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  .opacity(0);
-  //.translate(0,-100%);
-  .transition(all 200ms ease-in-out);
-
-  &.active {
-    //.translate(0,0);
-    .opacity(1);
-    z-index: 99;
-  }
-}
-
 
 .navbar-brand {
   @media @xs {
