--- a/css/style.css
+++ b/css/style.css
@@ -6503,7 +6503,13 @@ button.close {
 .panel-body:before,
 .panel-body:after,
 .modal-footer:before,
-.modal-footer:after {
+.modal-footer:after,
+.navigation:before,
+.navigation:after,
+.navigation > .wrapper:before,
+.navigation > .wrapper:after,
+.navigation .main-menu ul:before,
+.navigation .main-menu ul:after {
   content: " ";
   display: table;
 }
@@ -6521,7 +6527,10 @@ button.close {
 .navbar-collapse:after,
 .pager:after,
 .panel-body:after,
-.modal-footer:after {
+.modal-footer:after,
+.navigation:after,
+.navigation > .wrapper:after,
+.navigation .main-menu ul:after {
   clear: both;
 }
 .center-block {
@@ -6790,9 +6799,100 @@ nav {
   -o-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
   z-index: 100;
+  width: 100%;
 }
-nav > .container {
+nav > .container-fluid {
   position: relative;
+}
+.navigation {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  padding: 0;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: all 100ms ease-in-out;
+  -o-transition: all 100ms ease-in-out;
+  transition: all 100ms ease-in-out;
+}
+.navigation > .navbar-header,
+.navigation > .navbar-collapse {
+  margin-right: -15px;
+  margin-left: -15px;
+}
+@media (min-width: 10000) {
+  .navigation > .navbar-header,
+  .navigation > .navbar-collapse {
+    margin-right: 0;
+    margin-left: 0;
+  }
+}
+.navigation > .wrapper {
+  margin-left: 0;
+  margin-right: 0;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+}
+.navigation .main-menu {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background: red;
+  height: 100%;
+  -webkit-transform: translate(100%, 0);
+  -ms-transform: translate(100%, 0);
+  -o-transform: translate(100%, 0);
+  transform: translate(100%, 0);
+  -webkit-transition: all 200ms ease-in-out;
+  -o-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
+}
+@media (min-width: 1200px) {
+  .navigation .main-menu {
+    float: left;
+    width: 33.33333333%;
+  }
+}
+@media (min-width: 1200px) {
+  .navigation .main-menu {
+    margin-left: 66.66666667%;
+  }
+}
+.navigation .main-menu ul {
+  list-style-type: none;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.navigation .main-menu ul li {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 1200px) {
+  .navigation .main-menu ul li {
+    float: left;
+    width: 33.33333333%;
+  }
+}
+.navigation.active {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  z-index: 99;
+}
+.navigation.active .main-menu {
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+  transform: translate(0, 0);
 }
 .navbar-toggle {
   position: absolute;
@@ -6851,25 +6951,6 @@ nav > .container {
 }
 .navbar-toggle .icon-bar + .icon-bar {
   margin-top: 0;
-}
-.main-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: white;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transition: all 200ms ease-in-out;
-  -o-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-}
-.main-menu.active {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  z-index: 99;
 }
 @media only screen and (max-width: 767px) {
   .navbar-brand {
