--- a/css/navbar.less
+++ b/css/navbar.less
@@ -32,23 +32,73 @@ nav {
       background: rgba(0, 0, 0, 0.8);
     }
 
+
     .main-menu {
+      padding-top: 60px;
       .make-lg-column(4);
       .make-lg-column-offset(8);
       background: red;
       height: 100%;
       .translate(100%,0);
-      .transition(all 200ms ease-in-out);
+      .transition(all 500ms ease-in-out);
 
       ul {
         list-style-type: none;
-
-        .make-row();
-
+        margin: 0;
+        padding: 0;
 
         li {
-          .make-lg-column(4);
+          background: blue;
+          margin-bottom: 5px;
+          transition-duration: 500ms;
+          transition-timing-function: ease-out;
+          .opacity(0.8);
+          .translate(500px,0);
+
+          @menu-lag: 300ms;
+          @menu-item-lag: 30ms;
+
+          &:nth-of-type(1) {
+            transition-delay: 200ms;
+          }
+
+          &:nth-of-type(2) {
+            transition-delay: 230ms;
+          }
+
+          &:nth-of-type(3) {
+            transition-delay: 260ms;
+          }
+
+          &:nth-of-type(4) {
+            transition-delay: 290ms;
+          }
+
+          &:nth-of-type(5) {
+            transition-delay: 320ms;
+          }
+
+          &:nth-of-type(6) {
+            transition-delay: 350ms;
+          }
+
+          &:nth-of-type(7) {
+            transition-delay: 380ms;
+          }
+
+          a {
+            display: block;
+            text-align: center;
+            padding: 20px 5px;
+            color: white;
+
+            &:hover {
+              color:red;
+              text-decoration: none;
+            }
+          }
         }
+
       }
 
     }
@@ -60,6 +110,11 @@ nav {
 
       .main-menu {
         .translate(0,0);
+
+        li {
+          .opacity(1);
+          .translate(0,0);
+        }
       }
     }
 
