--- a/css/navbar.less
+++ b/css/navbar.less
@@ -23,7 +23,7 @@ nav {
     z-index: -1;
     padding: 0;
     .opacity(0);
-    //.translate(0,-100%);
+    .translate(0,-100%);
     .transition(all 100ms ease-in-out);
 
     > .wrapper {
@@ -33,14 +33,21 @@ nav {
     }
 
 
+
+
     .main-menu {
       padding-top: 60px;
-      .make-lg-column(4);
-      .make-lg-column-offset(8);
+      .make-lg-column(2);
+      .make-lg-column-offset(10);
       background: red;
       height: 100%;
       .translate(100%,0);
       .transition(all 500ms ease-in-out);
+
+      @menu-lag: 300ms;
+      @menu-items-duration: 500ms;
+      @menu-item-single-lag: 50ms;
+      @menu-items-lag: 100ms;
 
       ul {
         list-style-type: none;
@@ -55,36 +62,14 @@ nav {
           .opacity(0.8);
           .translate(500px,0);
 
-          @menu-lag: 300ms;
-          @menu-item-lag: 30ms;
-
-          &:nth-of-type(1) {
-            transition-delay: 200ms;
-          }
-
-          &:nth-of-type(2) {
-            transition-delay: 230ms;
-          }
-
-          &:nth-of-type(3) {
-            transition-delay: 260ms;
-          }
-
-          &:nth-of-type(4) {
-            transition-delay: 290ms;
-          }
-
-          &:nth-of-type(5) {
-            transition-delay: 320ms;
-          }
-
-          &:nth-of-type(6) {
-            transition-delay: 350ms;
-          }
-
-          &:nth-of-type(7) {
-            transition-delay: 380ms;
-          }
+          &:nth-of-type(1) {transition-delay: @menu-items-lag + 0 * @menu-item-single-lag;}
+          &:nth-of-type(2) {transition-delay: @menu-items-lag + 1 * @menu-item-single-lag;}
+          &:nth-of-type(3) {transition-delay: @menu-items-lag + 2 * @menu-item-single-lag;}
+          &:nth-of-type(4) {transition-delay: @menu-items-lag + 3 * @menu-item-single-lag;}
+          &:nth-of-type(5) {transition-delay: @menu-items-lag + 4 * @menu-item-single-lag;}
+          &:nth-of-type(6) {transition-delay: @menu-items-lag + 5 * @menu-item-single-lag;}
+          &:nth-of-type(7) {transition-delay: @menu-items-lag + 6 * @menu-item-single-lag;}
+          &:nth-of-type(8) {transition-delay: @menu-items-lag + 7 * @menu-item-single-lag;}
 
           a {
             display: block;
@@ -104,7 +89,7 @@ nav {
     }
 
     &.active {
-      //.translate(0,0);
+      .translate(0,0);
       .opacity(1);
       z-index: 99;
 
