--- a/css/navbar.less
+++ b/css/navbar.less
@@ -13,98 +13,7 @@ nav {
   }
 }
 
-.navigation {
-  .container-fluid;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  padding: 0;
-  .opacity(0);
-  //.translate(0,-100%);
-  .transition(all 100ms ease-in-out);
 
-  > .wrapper {
-    .make-row(0);
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-  }
-
-  .main-menu {
-    padding-top: 60px;
-    .make-lg-column(2);
-    .make-lg-column-offset(10);
-    .make-md-column(3);
-    .make-md-column-offset(9);
-    .make-sm-column(4);
-    .make-sm-column-offset(8);
-    .make-xs-column(12);
-    background: red;
-    height: 100%;
-    .translate(100%,0);
-    .transition(all 500ms ease-in-out);
-
-    @menu-lag: 300ms;
-    @menu-items-duration: 500ms;
-    @menu-item-single-lag: 50ms;
-    @menu-items-lag: 100ms;
-
-    ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-
-      li {
-        background: blue;
-        margin-bottom: 5px;
-        transition-timing-function: ease-out;
-        .opacity(0.8);
-        .translate(500px,0);
-
-        transition-duration: 500ms;
-        &:nth-of-type(1) {transition-delay: @menu-items-lag + 0 * @menu-item-single-lag;}
-        &:nth-of-type(2) {transition-delay: @menu-items-lag + 1 * @menu-item-single-lag;}
-        &:nth-of-type(3) {transition-delay: @menu-items-lag + 2 * @menu-item-single-lag;}
-        &:nth-of-type(4) {transition-delay: @menu-items-lag + 3 * @menu-item-single-lag;}
-        &:nth-of-type(5) {transition-delay: @menu-items-lag + 4 * @menu-item-single-lag;}
-        &:nth-of-type(6) {transition-delay: @menu-items-lag + 5 * @menu-item-single-lag;}
-        &:nth-of-type(7) {transition-delay: @menu-items-lag + 6 * @menu-item-single-lag;}
-        &:nth-of-type(8) {transition-delay: @menu-items-lag + 7 * @menu-item-single-lag;}
-
-        a {
-          display: block;
-          text-align: center;
-          padding: 20px 5px;
-          color: white;
-
-          &:hover {
-            color:red;
-            text-decoration: none;
-          }
-        }
-      }
-
-    }
-
-  }
-
-  &.active {
-    //.translate(0,0);
-    .opacity(1);
-    z-index: 99;
-
-    .main-menu {
-      .translate(0,0);
-
-      li {
-        .opacity(1);
-        .translate(0,0);
-      }
-    }
-  }
-}
 
 .navbar-toggle {
   position: absolute;
@@ -163,5 +72,104 @@ nav {
       width: 150px;
       height: auto;
     }
+  }
+
+  .logo {
+    display: inline-block;
+    height: auto;
+    margin: 10px 20px 10px 10px;
+
+    @media @xs { width: 150px; }
+    @media @sm { width: 200px; }
+    @media @md { width: 200px; }
+    @media @lg { width: 300px; }
+  }
+
+  .text {
+    display: inline-block;
+
+    .big {
+      font: 2em 'Open Sans', sans-serif;
+      color: grey;
+    }
+
+    .small {
+      font: 1em "Helvetica Neue", Helvetica, Arial, sans-serif;
+      color: grey;
+    }
+  }
+
+}
+.main-menu {
+
+  .make-lg-column(2);
+  .make-lg-column-offset(10);
+  .make-md-column(3);
+  .make-md-column-offset(9);
+  .make-sm-column(4);
+  .make-sm-column-offset(8);
+  .make-xs-column(12);
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  padding-top: 60px;
+  background: red;
+  height: 100%;
+  .translate(100%,0);
+  .transition(all 500ms ease-in-out);
+
+  @menu-lag: 300ms;
+  @menu-items-duration: 500ms;
+  @menu-item-single-lag: 50ms;
+  @menu-items-lag: 100ms;
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      background: blue;
+      margin-bottom: 5px;
+      transition-timing-function: ease-out;
+      .opacity(0.8);
+      .translate(500px,0);
+
+      transition-duration: 500ms;
+      &:nth-of-type(1) {transition-delay: @menu-items-lag + 0 * @menu-item-single-lag;}
+      &:nth-of-type(2) {transition-delay: @menu-items-lag + 1 * @menu-item-single-lag;}
+      &:nth-of-type(3) {transition-delay: @menu-items-lag + 2 * @menu-item-single-lag;}
+      &:nth-of-type(4) {transition-delay: @menu-items-lag + 3 * @menu-item-single-lag;}
+      &:nth-of-type(5) {transition-delay: @menu-items-lag + 4 * @menu-item-single-lag;}
+      &:nth-of-type(6) {transition-delay: @menu-items-lag + 5 * @menu-item-single-lag;}
+      &:nth-of-type(7) {transition-delay: @menu-items-lag + 6 * @menu-item-single-lag;}
+      &:nth-of-type(8) {transition-delay: @menu-items-lag + 7 * @menu-item-single-lag;}
+
+      a {
+        display: block;
+        text-align: center;
+        padding: 20px 5px;
+        color: white;
+
+        &:hover {
+          color:red;
+          text-decoration: none;
+        }
+      }
+    }
+
+  }
+
+  &.active {
+    .translate(0,0);
+
+    li {
+      .opacity(1);
+      .translate(0,0);
+    }
+
   }
 }
