--- a/css/style.css
+++ b/css/style.css
@@ -6503,11 +6503,7 @@ button.close {
 .panel-body:before,
 .panel-body:after,
 .modal-footer:before,
-.modal-footer:after,
-.navigation:before,
-.navigation:after,
-.navigation > .wrapper:before,
-.navigation > .wrapper:after {
+.modal-footer:after {
   content: " ";
   display: table;
 }
@@ -6525,9 +6521,7 @@ button.close {
 .navbar-collapse:after,
 .pager:after,
 .panel-body:after,
-.modal-footer:after,
-.navigation:after,
-.navigation > .wrapper:after {
+.modal-footer:after {
   clear: both;
 }
 .center-block {
@@ -6801,163 +6795,6 @@ nav {
 nav > .container-fluid {
   position: relative;
 }
-.navigation {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  padding: 0;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transition: all 100ms ease-in-out;
-  -o-transition: all 100ms ease-in-out;
-  transition: all 100ms ease-in-out;
-}
-.navigation > .navbar-header,
-.navigation > .navbar-collapse {
-  margin-right: -15px;
-  margin-left: -15px;
-}
-@media (min-width: 10000) {
-  .navigation > .navbar-header,
-  .navigation > .navbar-collapse {
-    margin-right: 0;
-    margin-left: 0;
-  }
-}
-.navigation > .wrapper {
-  margin-left: 0;
-  margin-right: 0;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.8);
-}
-.navigation .main-menu {
-  padding-top: 60px;
-  position: relative;
-  float: left;
-  width: 100%;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-  background: red;
-  height: 100%;
-  -webkit-transform: translate(100%, 0);
-  -ms-transform: translate(100%, 0);
-  -o-transform: translate(100%, 0);
-  transform: translate(100%, 0);
-  -webkit-transition: all 500ms ease-in-out;
-  -o-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
-}
-@media (min-width: 1200px) {
-  .navigation .main-menu {
-    float: left;
-    width: 16.66666667%;
-  }
-}
-@media (min-width: 1200px) {
-  .navigation .main-menu {
-    margin-left: 83.33333333%;
-  }
-}
-@media (min-width: 992px) {
-  .navigation .main-menu {
-    float: left;
-    width: 25%;
-  }
-}
-@media (min-width: 992px) {
-  .navigation .main-menu {
-    margin-left: 75%;
-  }
-}
-@media (min-width: 768px) {
-  .navigation .main-menu {
-    float: left;
-    width: 33.33333333%;
-  }
-}
-@media (min-width: 768px) {
-  .navigation .main-menu {
-    margin-left: 66.66666667%;
-  }
-}
-.navigation .main-menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-.navigation .main-menu ul li {
-  background: blue;
-  margin-bottom: 5px;
-  transition-timing-function: ease-out;
-  opacity: 0.8;
-  filter: alpha(opacity=80);
-  -webkit-transform: translate(500px, 0);
-  -ms-transform: translate(500px, 0);
-  -o-transform: translate(500px, 0);
-  transform: translate(500px, 0);
-  transition-duration: 500ms;
-}
-.navigation .main-menu ul li:nth-of-type(1) {
-  transition-delay: 100ms;
-}
-.navigation .main-menu ul li:nth-of-type(2) {
-  transition-delay: 150ms;
-}
-.navigation .main-menu ul li:nth-of-type(3) {
-  transition-delay: 200ms;
-}
-.navigation .main-menu ul li:nth-of-type(4) {
-  transition-delay: 250ms;
-}
-.navigation .main-menu ul li:nth-of-type(5) {
-  transition-delay: 300ms;
-}
-.navigation .main-menu ul li:nth-of-type(6) {
-  transition-delay: 350ms;
-}
-.navigation .main-menu ul li:nth-of-type(7) {
-  transition-delay: 400ms;
-}
-.navigation .main-menu ul li:nth-of-type(8) {
-  transition-delay: 450ms;
-}
-.navigation .main-menu ul li a {
-  display: block;
-  text-align: center;
-  padding: 20px 5px;
-  color: white;
-}
-.navigation .main-menu ul li a:hover {
-  color: red;
-  text-decoration: none;
-}
-.navigation.active {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  z-index: 99;
-}
-.navigation.active .main-menu {
-  -webkit-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
-  -o-transform: translate(0, 0);
-  transform: translate(0, 0);
-}
-.navigation.active .main-menu li {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  -webkit-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
-  -o-transform: translate(0, 0);
-  transform: translate(0, 0);
-}
 .navbar-toggle {
   position: absolute;
   width: 50px;
@@ -7024,6 +6861,162 @@ nav > .container-fluid {
     width: 150px;
     height: auto;
   }
+}
+.navbar-brand .logo {
+  display: inline-block;
+  height: auto;
+  margin: 10px 20px 10px 10px;
+}
+@media only screen and (max-width: 767px) {
+  .navbar-brand .logo {
+    width: 150px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .navbar-brand .logo {
+    width: 200px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .navbar-brand .logo {
+    width: 200px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .navbar-brand .logo {
+    width: 300px;
+  }
+}
+.navbar-brand .text {
+  display: inline-block;
+}
+.navbar-brand .text .big {
+  font: 2em 'Open Sans', sans-serif;
+  color: grey;
+}
+.navbar-brand .text .small {
+  font: 1em "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: grey;
+}
+.main-menu {
+  position: relative;
+  float: left;
+  width: 100%;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  padding-top: 60px;
+  background: red;
+  height: 100%;
+  -webkit-transform: translate(100%, 0);
+  -ms-transform: translate(100%, 0);
+  -o-transform: translate(100%, 0);
+  transform: translate(100%, 0);
+  -webkit-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+}
+@media (min-width: 1200px) {
+  .main-menu {
+    float: left;
+    width: 16.66666667%;
+  }
+}
+@media (min-width: 1200px) {
+  .main-menu {
+    margin-left: 83.33333333%;
+  }
+}
+@media (min-width: 992px) {
+  .main-menu {
+    float: left;
+    width: 25%;
+  }
+}
+@media (min-width: 992px) {
+  .main-menu {
+    margin-left: 75%;
+  }
+}
+@media (min-width: 768px) {
+  .main-menu {
+    float: left;
+    width: 33.33333333%;
+  }
+}
+@media (min-width: 768px) {
+  .main-menu {
+    margin-left: 66.66666667%;
+  }
+}
+.main-menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.main-menu ul li {
+  background: blue;
+  margin-bottom: 5px;
+  transition-timing-function: ease-out;
+  opacity: 0.8;
+  filter: alpha(opacity=80);
+  -webkit-transform: translate(500px, 0);
+  -ms-transform: translate(500px, 0);
+  -o-transform: translate(500px, 0);
+  transform: translate(500px, 0);
+  transition-duration: 500ms;
+}
+.main-menu ul li:nth-of-type(1) {
+  transition-delay: 100ms;
+}
+.main-menu ul li:nth-of-type(2) {
+  transition-delay: 150ms;
+}
+.main-menu ul li:nth-of-type(3) {
+  transition-delay: 200ms;
+}
+.main-menu ul li:nth-of-type(4) {
+  transition-delay: 250ms;
+}
+.main-menu ul li:nth-of-type(5) {
+  transition-delay: 300ms;
+}
+.main-menu ul li:nth-of-type(6) {
+  transition-delay: 350ms;
+}
+.main-menu ul li:nth-of-type(7) {
+  transition-delay: 400ms;
+}
+.main-menu ul li:nth-of-type(8) {
+  transition-delay: 450ms;
+}
+.main-menu ul li a {
+  display: block;
+  text-align: center;
+  padding: 20px 5px;
+  color: white;
+}
+.main-menu ul li a:hover {
+  color: red;
+  text-decoration: none;
+}
+.main-menu.active {
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+.main-menu.active li {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+  transform: translate(0, 0);
 }
 .sidebar {
   position: relative;
