new sideproject :D omg hahahaha 2

--- a/css/main.less
+++ b/css/main.less
@@ -137,12 +137,23 @@ body.disabled-onepage-scroll, .disabled-onepage-scroll .onepage-wrapper, html {
     left: 50%;
     .translate(-50%,0);
     bottom: 30px;
-    background: rgba(255,255,255,0.6);
     padding: 10px;
     color: rgba(0,0,0,0.6);
     border-radius: 10px;
 
-    font-size: 16px;
+    font-size: 50px;
+
+
+    -webkit-animation-name: scroll; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 1s; /* Chrome, Safari, Opera */
+    -webkit-animation-direction: alternate;
+    -webkit-animation-iteration-count: infinite;
+    animation-name: scroll;
+    animation-duration: 1s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+
+
   }
 }
 
@@ -344,4 +355,24 @@ body.disabled-onepage-scroll, .disabled-onepage-scroll .onepage-wrapper, html {
 
 .onepage-pagination {
   display: none;
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes scroll {
+  from {
+    color: rgba(255,255,255,1);
+  }
+  to {
+    color: rgba(255,255,255,0);
+  }
+}
+
+/* Standard syntax */
+@keyframes scroll {
+  from {
+    color: rgba(255,255,255,1);
+  }
+  to {
+    color: rgba(255,255,255,0);
+  }
 }
